src/css/creative.css
/* ... */
section {
	padding: 8rem 0;
}

.section-heading {
	margin-top: 0;
}

::-moz-selection {
	color: #fff;
	background: #212529;
	text-shadow: none;
}

::selection {
	color: #fff;
	background: #212529;
	text-shadow: none;
}

img::selection {
	color: #fff;
	background: transparent;
}

img::-moz-selection {
	color: #fff;
	background: transparent;
}

/**
 *
 */

.underline-anim {
	position:relative;
	padding-bottom:1px;
}

.underline-anim:hover {
	text-decoration: none;
}

.underline-anim:before {
	content:"";
	display:block;
	position:absolute;
	left:0;
	bottom:0;
	height:1px;
	width:0;
	transition:width 0s ease,background-color .5s ease;
}

.underline-anim:after{
	content:"";
	position:absolute;
	right:0;
	bottom:0;
	height:1px;
	width:0;
	background-color:#f80;
	transition:width .3s ease;
}

.underline-anim:hover:before { 
	width: 100%;
	background-color: #f80;
	transition:width .3s ease;
}

.underline-anim:hover:after { 
	width: 100%;
	background: transparent;
	transition: width 0s ease;
}

/**
 * Navbar
 */

#mainNav {
	border-bottom: 1px solid rgba(33, 37, 41, 0.1);
	background-color: #fff;
	font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
	-webkit-transition: all 0.2s;
	-moz-transition: all 0.2s;
	transition: all 0.2s;
}

#mainNav .navbar-brand {
	font-weight: 700;
	text-transform: uppercase;
	color: #FF8800;
	font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
}

#mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
	color: #FF8800;
}

#mainNav .navbar-nav > li.nav-item > a.nav-link,
#mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
	font-size: .9rem;
	font-weight: 700;
	text-transform: uppercase;
	color: #212529;
}

#mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
#mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
	color: #FF8800;
}

#mainNav .navbar-nav > li.nav-item > a.nav-link.active,
#mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active {
	color: #FF8800 !important;
	background-color: transparent;
}

#mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover,
#mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active:hover {
	background-color: transparent;
}

@media (min-width: 992px) {
	#mainNav {
		border-color: transparent;
		background-color: transparent;
	}
	#mainNav .navbar-brand {
		color: rgba(255, 255, 255, 0.7);
	}	
	#mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
		color: #fff;
	}
	#mainNav .navbar-nav > li.nav-item > a.nav-link {
		padding: 0.5rem 1rem;
	}
	#mainNav .navbar-nav > li.nav-item > a.nav-link,
	#mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
		color: rgba(255, 255, 255, 0.7);
	}
	#mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
	#mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
		color: #fff;
	}
	#mainNav.navbar-shrink {
		border-bottom: 1px solid rgba(33, 37, 41, 0.1);
		background-color: #fff;
	}
	#mainNav.navbar-shrink .navbar-brand {
		color: #FF8800;
	}
	#mainNav.navbar-shrink .navbar-brand:focus, #mainNav.navbar-shrink .navbar-brand:hover {
		color: #FF8800;
	}
	#mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
	#mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
		color: #212529;
	}
	#mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:hover,
	#mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
		color: #FF8800;
	}

	/**
	 * Dark Nav
	 */
	#mainNav .dark {
		color: rgba(0, 0, 0, 0.7);
	}
	#mainNav .dark:focus, #mainNav .dark:hover {
		color: rgba(255, 136, 0, 0.7);
	}	
	#mainNav .navbar-nav > li.nav-item > a.dark,
	#mainNav .navbar-nav > li.nav-item > a.dark:focus {
		color: rgba(0, 0, 0, 0.7);
	}
	#mainNav .navbar-nav > li.nav-item > a.dark:hover,
	#mainNav .navbar-nav > li.nav-item > a.dark:focus:hover {
		color: rgba(255, 136, 0, 0.7);
	}	
}

/**
 * Header
 */

header.about {
	margin-top: 4rem;
	padding-top: 8rem;
	padding-bottom: calc(8rem - 56px);
	background-image: url("../images/about/header.jpg");
	background-position: left top;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

@media (max-width: 768px) {
	header.about {
		background-image: url("../images/about/header-mobile.jpg");
		background-position: center top;		
		margin-top: 6rem;
	}
}

header.about h1 {
	font-size: 4rem;
	line-height: 4rem;
	padding-bottom: 1rem;
	color: #F80;
}

header.about p {
	font-weight: 300;
	font-size: 1.1rem;
}

header.about p > strong {
	font-weight: 600;
}

@media (max-width: 992px) {
	header.about h1 {
		font-size: 3rem;
		line-height: 3rem;		
	}	
}
@media (max-width: 768px) {
	header.about {
		padding-top: 16rem;
		padding-bottom: 0px;
	}	
	header.about div.container {
		background-color: rgba(0, 0, 0, 0.7);
		color: #FFF;
		max-width: 100%;
	}
}

@media (min-width: 992px) {
	header.about {
		height: 100vh;
		min-height: 650px;
		padding-top: 8rem;
		padding-bottom: 0;
	}
}
@media (min-width: 1281px) {
	header.about p {
		font-size: 1.2rem;
	}
}

header.portfolio {
	padding-top: 8rem;
	padding-bottom: calc(8rem - 56px);
	background-position: center center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

header.masthead {
	padding-top: 10rem;
	padding-bottom: calc(10rem - 56px);
	background-image: url("../images/portfolio-fuzzies/header.jpg");
	background-position: center center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

header.masthead hr {
	margin-top: 30px;
	margin-bottom: 30px;
}

header.masthead h1 {
	font-size: 2rem;
}

header.masthead p {
	font-weight: 300;
}

@media (min-width: 768px) {
	header.masthead p {
		font-size: 1.15rem;
	}
}

@media (min-width: 992px) {
	header.masthead {
		height: 100vh;
		min-height: 650px;
		padding-top: 0;
		padding-bottom: 0;
	}
	header.masthead h1 {
		font-size: 3rem;
	}
}
/* ... */

